soluciones/eperez/01-mysql-laravel/laravel-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
  namespace: laravel
spec:
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      
      containers:
      - name: laravel
        ports:
        - containerPort: 8000
        image: bitnami/laravel:11.0.8
        volumeMounts:
          - mountPath: "/app"
            name: pv-storage-laravel

      volumes:
        - name: pv-storage-laravel
          persistentVolumeClaim:
            claimName: pv-claim-laravel      

        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 8000
        #   initialDelaySeconds: 60
        #   periodSeconds: 20
        #   timeoutSeconds: 5      

        # readinessProbe:
        #   tcpSocket:
        #     port: 8000
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
