soluciones/eperez/01-mysql-laravel/mysql-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: laravel
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:    
      containers:
      - name: mysql
        image: mysql:8.4
        ports:
        - containerPort: 3306
