soluciones/eperez/01-mysql-laravel/mysql-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: laravel
  labels:
    app: db
spec:
  clusterIP: None
  selector:
    app: db
  ports:
    - port: 3306
