soluciones/eperez/01-mysql-laravel/laravel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-laravel
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   rules:
   - host: laravel.com
     http:
       paths:
       - path: /laravel
         pathType: Prefix
         backend:
           service:
             name: laravel-svc
             port:
               number: 8000
